[package]
name = "ascii-cats"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
color-eyre = "0.6.3"
pretty-hex = "0.4.1"
artem = "3.0.0"
image = "0.25.5"